# mod-lab06-markov

./: CMakeLists.txt
include/: textgen.h
src/: main.cpp  textgen.cpp
test/: tests.cpp
